<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"性格色彩测试"</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- 关于UI -->
    <string name="about">关于</string>
    <string name="developer">Developer:</string>
    <string name="version">Version:</string>
    <string name="from_baidu">相关参考资料来自百度百科，详细：</string>
    <string name="click_me">点我</string>
    <string name="developerName">WQ</string>
    <string name="versionText">1.0</string>

    <!-- 开始UI -->
    <string name="personality_test">性格色彩测试</string>
    <string name="start_test">开始测试</string>

    <!-- 结果统计UI -->
    <string name="test_result_statistic">测试结果统计</string>
    <string name="color_description">色彩说明</string>

    <!-- 颜色 -->
    <string name="color_red">红</string>
    <string name="color_blue">蓝</string>
    <string name="color_yellow">黄</string>
    <string name="color_green">绿</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_result_statistic">ResultStatisticActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_color_description">ColorDescriptionActivity</string>

</resources>